--- a/templates/item_search.html
+++ b/templates/item_search.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>M - Pesquisa de Itens (MZ)</title>
+  <title>M - Pesquisa de Itens</title>
   <!-- Responsividade em dispositivos móveis -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -268,7 +268,7 @@
   <!-- Cabeçalho com botão de voltar e título -->
   <header>
     <a href="{{ url_for('index') }}" class="btn-voltar-inicio" title="Voltar à Página Inicial">&#x2B05;</a>
-    <h1>Pesquisa de Itens (MZ)</h1>
+    <h1>Pesquisa de Itens</h1>
   </header>
 
   <!-- Conteúdo principal -->
